--- a/templates/home.html
+++ b/templates/home.html
@@ -90,7 +90,11 @@
       <a class="btn primary" href="{% url 'account_signup' %}">Создать аккаунт</a>
       <a class="btn" href="{% url 'account_login' %}">Войти</a>
     </div>
-    <div class="preview">Превью. Позже добавим реальные скриншоты.</div>
+    <div class="card">
+      <div class="preview">
+        Превью. Позже добавим реальные скриншоты.
+      </div>
+    </div>
   </div>
 
   <div class="grid3">
